--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* body {
-
+ body {
+  background-color:#143073;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,7 +11,9 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} */
+} 
+  
+ 
 
 .article-content {
   padding: 120px 0px;
